add appointment service
