# src/server/app/appointment/controller.ts
@@ -1,0 +1,166 @@
+import { Response, Request, NextFunction } from "express";
+import tryCatchErrorDecorator from "../../utils/tryCatchErrorDecorator";
+import { ServiceContainer } from "../clients";
+import {
+  AddAppointmentRequest,
+  Appointment,
+  AppointmentForm,
+} from "../../../database-client/src/Schema";
+
+class AppointmentsControllers {
+  @tryCatchErrorDecorator
+  static async addAppointment(
+    request: Request,
+    res: Response,
+    next: NextFunction
+  ) {
+    // #swagger.tags = ['Appointment'];
+
+    /*
+        #swagger.description = 'Endpoint to add appointment';
+         #swagger.parameters['obj'] = {
+                     in: 'body',
+                     schema: {
+                        $email: '',
+                        $password: '',
+                    },
+        }
+        #swagger.responses[200] = {
+            schema: {
+                user: {
+                    iss: "",
+                    aud: "",
+                },
+                refreshToken: '',
+                token: '',
+             }
+        }
+        */
+    const form = request.body as unknown as AddAppointmentRequest;
+    const service = (request as any).service as ServiceContainer;
+    const data = await service.appointmentService.addAppointment(form);
+
+    res.status(200).json(data);
+  }
+
+  @tryCatchErrorDecorator
+  static async getAppointments(
+    request: Request,
+    res: Response,
+    next: NextFunction
+  ) {
+    // #swagger.tags = ['Appointment'];
+
+    /*
+        #swagger.description = 'Endpoint to get all appointments';
+         #swagger.parameters['obj'] = {
+                     in: 'body',
+                     schema: {
+                        $email: '',
+                        $password: '',
+                    },
+        }
+        #swagger.responses[200] = {
+            schema: {
+                user: {
+                    iss: "",
+                    aud: "",
+                },
+                refreshToken: '',
+                token: '',
+             }
+        }
+        */
+    const { start, end, search } = request.query as unknown as AppointmentForm;
+    const service = (request as any).service as ServiceContainer;
+    const data = await service.appointmentService.getAppointments(
+      start,
+      end,
+      search
+    );
+
+    res.status(200).json(data);
+  }
+
+  @tryCatchErrorDecorator
+  static async updateAppointment(
+    request: Request,
+    res: Response,
+    next: NextFunction
+  ) {
+    // #swagger.tags = ['Appointment'];
+
+    /*
+        #swagger.description = 'Endpoint to update appointment';
+         #swagger.parameters['obj'] = {
+                     in: 'body',
+                     schema: {
+                        $email: '',
+                        $password: '',
+                    },
+        }
+        #swagger.responses[200] = {
+            schema: {
+                user: {
+                    iss: "",
+                    aud: "",
+                },
+                refreshToken: '',
+                token: '',
+             }
+        }
+        */
+    const form = request.body as unknown as Appointment;
+    const service = (request as any).service as ServiceContainer;
+    const { categoryId } = request.params;
+
+    const data = await service.appointmentService.updateAppointment(
+      categoryId,
+      form
+    );
+
+    res.status(200).json(data);
+  }
+
+  @tryCatchErrorDecorator
+  static async deleteAppointment(
+    request: Request,
+    res: Response,
+    next: NextFunction
+  ) {
+    // #swagger.tags = ['Appointment'];
+
+    /*
+        #swagger.description = 'Endpoint to delete appointment';
+         #swagger.parameters['obj'] = {
+                     in: 'body',
+                     schema: {
+                        $email: '',
+                        $password: '',
+                    },
+        }
+        #swagger.responses[200] = {
+            schema: {
+                user: {
+                    iss: "",
+                    aud: "",
+                },
+                refreshToken: '',
+                token: '',
+             }
+        }
+        */
+    const service = (request as any).service as ServiceContainer;
+    const data = await service.appointmentService.deleteAppointment(
+      request.params.categoryId
+    );
+
+    if (data) {
+      res.json({ status: "success" });
+    } else {
+      res.json({ status: "faild" });
+    }
+  }
+}
+
+export default AppointmentsControllers;
